--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ project(ModBadgesPlus VERSION 1.0.0)
 
 add_library(${PROJECT_NAME} SHARED
     src/main.cpp
-    CommentCell/main.cpp
+    # src/CommentCell.cpp
     # Add your cpp files here
 )
 
